--- a/page1.html
+++ b/page1.html
@@ -1,12 +1,42 @@
 <!doctype html>
 <html>
 <head>
-<style>            
+<style>  
+    p {
+        color: #ff0033;
+        border: 1px solid black;
+    }
+    div.s1 {
+        color: blue;
+        background-color : yellow;
+    }
+    div.s2 {
+        color: green;
+        background-color: #aaaaaa;
+    }
+    .s3 {
+        border:1px solid black;
+    }
+
+    .b1 , .b2 {
+        background-color: orange;
+    }
+    
 </style>
 <script>
 </script>
 </head>    
 <body>
 The quick brown fox jumps over the lazy brown dog.
+<p>This is a paragraph with a style</p>
+<p>This is another paragraph with a style</p>
+<div class="s1">This is div with class s1</div>
+<div class="s2">This is div with class s2</div>
+<div>This is a div with no class</div>
+<div class="s1 s3">This is a div with class s1 and s3</div>
+<p class="s3">This is a p with class s3</p>
+<p class="b1">This is p with class b1</p>
+<p class="b2">This is a p with class b2</p>
+
 </body>
 </html>
